--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media screen and (min-device-width: 768px) {
+@media screen and (min-width: 768px) {
 	#index_wrapper {
 		margin: 2% 0 0 25%;
 		padding: 0 5%;
